added feature "expressionsAsActions" which converts all expressions into actions for easier config creation in quick reply driven conversations